--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          response=$(curl -s -H "Authorization: token $GITHUB_TOKEN" https://api.github.com/repos/SushmitaThakur/adyen-magento2-forked/releases/latest)
+          response=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
           LATEST_RELEASE_URL=$(echo $response | jq -r '.zipball_url')
           RELEASE_NOTES=$(echo $response | jq -r '.body')
           echo "LATEST_RELEASE_URL=${LATEST_RELEASE_URL}" >> $GITHUB_ENV
