--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -26,12 +26,12 @@ jobs:
           response=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
           LATEST_RELEASE_URL=$(echo $response | jq -r '.zipball_url')
           RELEASE_NOTES=$(echo $response | jq -r '.body')
-          echo "LATEST_RELEASE_URL=${LATEST_RELEASE_URL}" >> $GITHUB_ENV
-          echo "RELEASE_NOTES=${RELEASE_NOTES}" >> $GITHUB_ENV
+          echo "LATEST_RELEASE_URL=$LATEST_RELEASE_URL" >> $GITHUB_OUTPUT
+          echo "RELEASE_NOTES=$RELEASE_NOTES" >> $GITHUB_OUTPUT
 
       - name: Download the latest release
         run: |
-          curl -L ${{ env.LATEST_RELEASE_URL }} -o source.zip
+          curl -L $LATEST_RELEASE_URL -o source.zip
 
       - name: Extract the downloaded ZIP
         run: |
@@ -44,4 +44,4 @@ jobs:
       - name: Print release notes
         run: |
           echo "Release Notes:"
-          echo "${{ env.RELEASE_NOTES }}"
+          echo "$RELEASE_NOTES"
