--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -29,8 +29,11 @@ jobs:
           echo "LATEST_RELEASE_URL=$LATEST_RELEASE_URL" >> $GITHUB_OUTPUT
           # Use a heredoc to properly handle multiline output
           echo "RELEASE_NOTES<<EOF" >> $GITHUB_OUTPUT
-          echo "${RELEASE_NOTES}" >> $GITHUB_OUTPUT
+          echo "$RELEASE_NOTES" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
+          
+          echo "$LATEST_RELEASE_URL"
+          echo "$RELEASE_NOTES" 
           
       - name: Download the latest release
         run: |
