--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -1,10 +1,11 @@
 
+
 name: Download Release ZIP and Fetch Release Notes
 
 on:
   workflow_dispatch:
   push:
-   
+
 jobs:
   download-release:
     runs-on: ubuntu-latest
@@ -22,27 +23,42 @@ jobs:
           LATEST_RELEASE_URL=$(echo $response | jq -r '.zipball_url')
           RELEASE_NOTES=$(echo $response | jq -r '.body')
           echo "LATEST_RELEASE_URL=$LATEST_RELEASE_URL" >> $GITHUB_OUTPUT
-          # Use a heredoc to properly handle multiline output
           echo "RELEASE_NOTES<<EOF" >> $GITHUB_OUTPUT
           echo "$RELEASE_NOTES" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
           
           echo "$LATEST_RELEASE_URL"
           echo "$RELEASE_NOTES" 
-          
-      - name: Download the latest release
+
+      - name: Download and process the latest release
         run: |
+          # Download the zip file
           curl -L ${{ steps.fetch_release.outputs.LATEST_RELEASE_URL }} -o source.zip
 
-      - name: Extract the downloaded ZIP
-        run: |
-          unzip source.zip -d ./source
+          # Unzip the downloaded file
+          unzip source.zip
+
+          # Get the name of the extracted directory
+          EXTRACTED_DIR=$(unzip -l source.zip | awk '/^-/ {print $4}' | grep -oE '^[^/]+' | head -n 1)
+
+          # Create a new zip file with exclusions
+          zip -r processed_release.zip "$EXTRACTED_DIR" -x "*.git*" -x "*.DS_Store"
+
+          # Clean up
+          rm -rf source.zip "$EXTRACTED_DIR"
 
       - name: List files for verification
         run: |
-          ls -la ./source
+          ls -la
 
       - name: Print release notes
         run: |
           echo "Release Notes:"
           echo "${{ steps.fetch_release.outputs.RELEASE_NOTES }}"
+
+      - name: Upload processed release as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: processed-release
+          path: processed_release.zip
+
