3 add session download-release.yml

--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -64,7 +64,7 @@ jobs:
           ADOBE_APP_SECRET: ${{ secrets.ADOBE_CLIENT_SECRET }}
         run: |
           curl -X POST \
-          -u '${{ secrets.$ADOBE_APP_ID }}:${{ secrets.$ADOBE_APP_SECRET }}' \
+          -u '${{ secrets.ADOBE_APP_ID }}:${{ secrets.ADOBE_APP_SECRET }}' \
           -H 'Content-Type: application/json' \
           -d '{ "grant_type" : "session" }' \
           https://commercedeveloper-sandbox-api.adobe.com/rest/v1/app/session/token
