8 download-release.yml

--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -60,11 +60,11 @@ jobs:
       - name: Get session token
         env:
           ADOBE_API_URL: ${{ secrets.ADOBE_API_URL }}
-          ADOBE_APP_ID: ${{ secrets.ADOBE_CLIENT_ID }}
-          ADOBE_APP_SECRET: ${{ secrets.ADOBE_CLIENT_SECRET }}
+          ADOBE_CLIENT_ID: ${{ secrets.ADOBE_CLIENT_ID }}
+          ADOBE_CLIENT_SECRET: ${{ secrets.ADOBE_CLIENT_SECRET }}
         run: |
           curl -X POST \
-          -u '${{ secrets.ADOBE_APP_ID }}:${{ secrets.ADOBE_APP_SECRET }}' \
+          -u '${{ secrets.ADOBE_CLIENT_ID }}:${{ secrets.ADOBE_CLIENT_SECRET }}' \
           -H 'Content-Type: application/json' \
           -d '{ "grant_type" : "session" }' \
           https://commercedeveloper-sandbox-api.adobe.com/rest/v1/app/session/token
