--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -63,7 +63,7 @@ jobs:
           ADOBE_CLIENT_ID: ${{ secrets.ADOBE_CLIENT_ID }}
           ADOBE_CLIENT_SECRET: ${{ secrets.ADOBE_CLIENT_SECRET }}
         run: |
-          echo ADOBE_API_URL \
+          echo "${{ secrets.ADOBE_API_URL }}" \
           curl -X POST \
           -u '${{ secrets.ADOBE_CLIENT_ID }}:${{ secrets.ADOBE_CLIENT_SECRET }}' \
           -H 'Content-Type: application/json' \
