--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -137,6 +137,7 @@ jobs:
           SESSION_TOKEN: ${{ steps.get_session_token.outputs.SESSION_TOKEN }}
           BASE_URL: "https://commercedeveloper-sandbox-api.adobe.com"
         run: |
+          echo ${{ steps.get_session_token.outputs.SESSION_TOKEN }} \
           # First, get all submissions
           submissions_response=$(curl -s -X GET \
           -H "Authorization: Bearer $SESSION_TOKEN" \
