--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -75,28 +75,6 @@ jobs:
           SESSION_TOKEN=$(echo $response | jq -r '.ust')
           echo "SESSION_TOKEN=$SESSION_TOKEN" >> $GITHUB_OUTPUT
 
-      # - name: Use session token to interact with Adobe Commerce API
-      #   env:
-      #     SESSION_TOKEN: ${{ steps.get_session_token.outputs.SESSION_TOKEN }}
-      #   run: |
-      #     # Example: Get system information
-      #     response=$(curl -s -X GET \
-      #     -H "Authorization: Bearer $SESSION_TOKEN" \
-      #     -H "Content-Type: application/json" \
-      #     "https://commercedeveloper-sandbox-api.adobe.com/rest/v1/system")
-          
-      #     echo "API Response:"
-      #     echo "$response"
-          
-      #     # Check if the response is valid JSON
-      #     if echo "$response" | jq empty; then
-      #       echo "Valid JSON response:"
-      #       echo "$response" | jq .
-      #     else
-      #       echo "Invalid JSON response. Raw output:"
-      #       echo "$response"
-      #     fi
-
       - name: Upload and fetch file ID
         id: upload_and_fetch
         env:
@@ -104,7 +82,7 @@ jobs:
           BASE_URL: "https://commercedeveloper-sandbox-api.adobe.com"
         run: |
           # Upload the file
-          upload_response=$(curl -X POST \
+          upload_response=$(curl -v -X POST \
           -H "Authorization: Bearer $SESSION_TOKEN" \
           -H "Content-Type: multipart/form-data" \
           -F "file=@processed_release.zip;type=application/zip" \
@@ -113,74 +91,87 @@ jobs:
           echo "Upload Response:"
           echo "$upload_response"
           
-          # Fetch all files
-          files_response=$(curl -s -X GET \
-          -H "Authorization: Bearer $SESSION_TOKEN" \
-          -H "Content-Type: application/json" \
-          "${BASE_URL}/rest/v1/files/uploads")
-          
-          echo "Files Response:"
-          echo "$files_response"
-          
-          # Check if the response is valid JSON
-          if echo "$files_response" | jq empty; then
-            echo "Valid JSON response for files list"
-            
-            # Extract the most recent file_upload_id
-            file_upload_id=$(echo "$files_response" | jq -r 'sort_by(.file_upload_id) | reverse | .[0].file_upload_id')
-            
-            if [ ! -z "$file_upload_id" ]; then
-              echo "Most recent File upload ID: $file_upload_id"
-              echo "FILE_UPLOAD_ID=$file_upload_id" >> $GITHUB_OUTPUT
-            else
-              echo "No file upload IDs found in the response."
-              exit 1
-            fi
-          else
-            echo "Invalid JSON response for files list. Raw output:"
-            echo "$files_response"
-            exit 1
-          fi
-      - name: Check submission status
-        id: Check_status
+          # Extract the file_upload_id
+          file_upload_id=$(echo "$upload_response" | jq -r '.[0].file_upload_id')
+          echo "FILE_UPLOAD_ID=$file_upload_id" >> $GITHUB_OUTPUT
+          echo "File upload ID: $file_upload_id"
+
+      - name: Submit package
+        id: submit_package
         env:
           SESSION_TOKEN: ${{ steps.get_session_token.outputs.SESSION_TOKEN }}
           BASE_URL: "https://commercedeveloper-sandbox-api.adobe.com"
+          FILE_UPLOAD_ID: ${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}
         run: |
-          # First, get all submissions
-          submissions_response=$(curl -s -X GET \
-          -H "Authorization: Bearer ${SESSION_TOKEN}" \
+          # Prepare the JSON payload for package submission
+          json_payload=$(cat <<EOF
+          [{
+            "action": {
+              "technical": "submit",
+              "marketing": "submit"
+            },
+            "type": "extension",
+            "platform": "M2",
+            "version_compatibility": [
+              {
+                "edition": "CE",
+                "versions": ["2.4"]
+              }
+            ],
+            "name": "Your Extension Name",
+            "long_description": "Your long description here",
+            "release_notes": "Your release notes here",
+            "version": "1.0.0",
+            "artifact": {
+              "file_upload_id": "$FILE_UPLOAD_ID"
+            },
+            "documentation_artifacts": {
+              "user": {
+                "file_upload_id": "$FILE_UPLOAD_ID"
+              }
+            },
+            "categories": [
+              "//Extensions//Your Category"
+            ],
+            "license_type": "osi-approved-open-source"
+          }]
+          EOF
+          )
+
+          # Submit the package
+          submission_response=$(curl -v -X POST \
+          -H "Authorization: Bearer $SESSION_TOKEN" \
           -H "Content-Type: application/json" \
-          "${BASE_URL}/rest/v1/extensions/submissions")
+          -d "$json_payload" \
+          "${BASE_URL}/rest/v1/products/packages")
 
-          echo "Submissions Response:"
-          echo "$submissions_response" | jq .
+          echo "Submission Response:"
+          echo "$submission_response"
 
-          # Check if the response is valid JSON
-          if echo "$submissions_response" | jq empty; then
-            echo "Valid JSON response for submissions list"
+          # Extract the submission_id
+          submission_id=$(echo "$submission_response" | jq -r '.[0].submission_id')
+          echo "SUBMISSION_ID=$submission_id" >> $GITHUB_OUTPUT
+          echo "Submission ID: $submission_id"
 
-            # Check if there's a submission with the file we just uploaded
-            file_upload_id="${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}"
-            submission_id=$(echo "$submissions_response" | jq -r --arg file_id "$file_upload_id" '.[] | select(.files[] | .file_upload_id == $file_id) | .submission_id')
+      - name: Check submission status
+        id: check_status
+        env:
+          SESSION_TOKEN: ${{ steps.get_session_token.outputs.SESSION_TOKEN }}
+          BASE_URL: "https://commercedeveloper-sandbox-api.adobe.com"
+          SUBMISSION_ID: ${{ steps.submit_package.outputs.SUBMISSION_ID }}
+        run: |
+          if [ -z "$SUBMISSION_ID" ]; then
+            echo "No submission ID found. Skipping status check."
+            exit 0
+          fi
 
-            if [ -n "$submission_id" ]; then
-              echo "Submission ID for the uploaded file: $submission_id"
-              echo "SUBMISSION_ID=$submission_id" >> $GITHUB_OUTPUT
+          submission_details=$(curl -s -X GET \
+          -H "Authorization: Bearer $SESSION_TOKEN" \
+          -H "Content-Type: application/json" \
+          "${BASE_URL}/rest/v1/products/packages/$SUBMISSION_ID")
 
-              # Get details for this specific submission
-              submission_details=$(curl -s -X GET \
-              -H "Authorization: Bearer $SESSION_TOKEN" \
-              -H "Content-Type: application/json" \
-              "${BASE_URL}/rest/v1/extensions/submissions/$submission_id")
+          echo "Submission Details:"
+          echo "$submission_details" | jq .
 
-              echo "Submission Details:"
-              echo "$submission_details" | jq .
-            else
-              echo "No submission found for the uploaded file."
-            fi
-          else
-            echo "Invalid JSON response for submissions list. Raw output:"
-            echo "$submissions_response"
-            exit 1
-          fis
+          status=$(echo "$submission_details" | jq -r '.eqp_status')
+          echo "Current submission status: $status"
