Checking session token is there in the next step

--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -90,6 +90,7 @@ jobs:
           
           echo "Upload Response:"
           echo "$upload_response"
+          echo "Session token: $SESSION_TOKEN"
           
           # Fetch all files
           files_response=$(curl -s -X GET \
