--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -1,4 +1,3 @@
-
 name: Download Release and Create Archive
 
 on:
@@ -52,19 +51,166 @@ jobs:
           echo "${{ steps.fetch_release.outputs.RELEASE_NOTES }}"
 
       - name: Upload processed release as artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: processed-release
           path: processed_release.zip
       
       - name: Get session token
+        id: get_session_token
         env:
           ADOBE_API_URL: ${{ secrets.ADOBE_API_URL }}
           ADOBE_CLIENT_ID: ${{ secrets.ADOBE_CLIENT_ID }}
           ADOBE_CLIENT_SECRET: ${{ secrets.ADOBE_CLIENT_SECRET }}
         run: |
-          curl -X POST \
+          response=$(curl -X POST \
           -u '${{ secrets.ADOBE_CLIENT_ID }}:${{ secrets.ADOBE_CLIENT_SECRET }}' \
           -H 'Content-Type: application/json' \
           -d '{ "grant_type" : "session" }' \
-          https://commercedeveloper-sandbox-api.adobe.com/rest/v1/app/session/token
+          https://commercedeveloper-sandbox-api.adobe.com/rest/v1/app/session/token)
+          
+          echo "Session Token Response: $response"
+          
+          SESSION_TOKEN=$(echo $response | jq -r '.ust')
+          echo "SESSION_TOKEN=$SESSION_TOKEN" >> $GITHUB_OUTPUT
+
+      - name: Upload and fetch file ID
+        id: upload_and_fetch
+        env:
+          SESSION_TOKEN: ${{ steps.get_session_token.outputs.SESSION_TOKEN }}
+          BASE_URL: "https://commercedeveloper-sandbox-api.adobe.com"
+        run: |
+          # Upload the file
+          upload_response=$(curl -X POST \
+          -H "Authorization: Bearer $SESSION_TOKEN" \
+          -H "Content-Type: multipart/form-data" \
+          -F "file=@processed_release.zip;type=application/zip" \
+          "${BASE_URL}/rest/v1/files/uploads")
+          
+          echo "Upload Response:"
+          echo "$upload_response"
+          echo "Session token: $SESSION_TOKEN"
+          
+          # Fetch all files
+          files_response=$(curl -s -X GET \
+          -H "Authorization: Bearer $SESSION_TOKEN" \
+          -H "Content-Type: application/json" \
+          "${BASE_URL}/rest/v1/files/uploads")
+          
+          echo "Files Response:"
+          echo "$files_response"
+          
+          # Check if the response is valid JSON
+          if echo "$files_response" | jq empty; then
+            echo "Valid JSON response for files list"
+            
+            # Extract the most recent file_upload_id
+            file_upload_id=$(echo "$files_response" | jq -r 'sort_by(.file_upload_id) | reverse | .[0].file_upload_id')
+            
+            if [ ! -z "$file_upload_id" ]; then
+              echo "Most recent File upload ID: $file_upload_id"
+              echo "FILE_UPLOAD_ID=$file_upload_id" >> $GITHUB_OUTPUT
+            else
+              echo "No file upload IDs found in the response."
+              exit 1
+            fi
+          else
+            echo "Invalid JSON response for files list. Raw output:"
+            echo "$files_response"
+            exit 1
+          fi
+
+      - name: Submit package
+        id: submit_package
+        env:
+          SESSION_TOKEN: ${{ steps.get_session_token.outputs.SESSION_TOKEN }}
+          BASE_URL: "https://commercedeveloper-sandbox-api.adobe.com"
+          FILE_UPLOAD_ID: ${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}
+        run: |
+          echo "Debug: First 10 chars of SESSION_TOKEN=${SESSION_TOKEN:0:10}..."
+          echo "Debug: FILE_UPLOAD_ID=$FILE_UPLOAD_ID"
+          
+          # Submit the package
+          submission_response=$(curl -v -X POST \
+          -H "Authorization: Bearer $SESSION_TOKEN" \
+          -H "Content-Type: application/json" \
+          -d '[{
+            "action": {
+              "technical": "submit",
+              "marketing": "submit"
+            },
+            "type": "extension",
+            "platform": "M2",
+            "version_compatibility": [
+              {
+                "edition": "CE",
+                "versions": ["2.4"]
+              },
+              {
+                "edition": "EE",
+                "versions": ["2.4"]
+              },
+              {
+                "edition": "ECE",
+                "versions": ["2.4"]
+              }
+            ],
+            "name": "Your Extension Name",
+            "short_description": "A brief description of your extension",
+            "long_description": "Your long description here",
+            "release_notes": "${{ steps.fetch_release.outputs.RELEASE_NOTES }}",
+            "version": "1.0.0",
+            "artifact": {
+              "file_upload_id": "'$FILE_UPLOAD_ID'"
+            },
+            "documentation_artifacts": {
+              "user": {
+                "file_upload_id": "'$FILE_UPLOAD_ID'"
+              }
+            },
+            "categories": [
+              "//Extensions//Your Category"
+            ],
+            "license_type": "apache",
+            "sku": "your-vendor/your-module-name"
+          }]' \
+          "${BASE_URL}/rest/v1/products/packages")
+          
+          echo "Submission Response:"
+          echo "$submission_response"
+          
+          # Check if the response is valid JSON
+          if echo "$submission_response" | jq empty; then
+            echo "Valid JSON response"
+            submission_id=$(echo "$submission_response" | jq -r '.[0].submission_id // empty')
+            if [ -n "$submission_id" ]; then
+              echo "SUBMISSION_ID=$submission_id" >> $GITHUB_OUTPUT
+              echo "Submission ID: $submission_id"
+            else
+              echo "Failed to extract submission ID from the response."
+              exit 1
+            fi
+          else
+            echo "Invalid JSON response. Raw output:"
+            echo "$submission_response"
+            exit 1
+          fi
+      - name: Check submission status
+        id: check_status
+        env:
+          SESSION_TOKEN: ${{ steps.get_session_token.outputs.SESSION_TOKEN }}
+          BASE_URL: "https://commercedeveloper-sandbox-api.adobe.com"
+          SUBMISSION_ID: ${{ steps.submit_package.outputs.SUBMISSION_ID }}
+        run: |
+          if [ -z "$SUBMISSION_ID" ]; then
+            echo "No submission ID found. Skipping status check."
+            exit 0
+          fi
+          submission_details=$(curl -s -X GET \
+          -H "Authorization: Bearer $SESSION_TOKEN" \
+          -H "Content-Type: application/json" \
+          "${BASE_URL}/rest/v1/products/packages/$SUBMISSION_ID")
+          echo "Submission Details:"
+          echo "$submission_details" | jq .
+          status=$(echo "$submission_details" | jq -r '.eqp_status')
+          echo "Current submission status: $status"
