--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -68,9 +68,10 @@ jobs:
           echo "SESSION_TOKEN=$SESSION_TOKEN" >> $GITHUB_OUTPUT
           
           # echo "Session Token Response: $response"
-          echo "${{ secrets.ADOBE_API_URL }}"
-          echo "${{ secrets.ADOBE_CLIENT_ID }}"
-          echo "${{ secrets.ADOBE_CLIENT_SECRET }}"
+          echo "Github token: ${{ secrets.GITHUB_TOKEN }}"
+          echo "Api url: ${{ secrets.ADOBE_API_URL }}"
+          echo "client id: ${{ secrets.ADOBE_CLIENT_ID }}"
+          echo "client secret: ${{ secrets.ADOBE_CLIENT_SECRET }}"
           
           
 
