Add environment name

--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -5,8 +5,9 @@ on:
   push:
 
 jobs:
-  download-and-archive:
+  marketplace-automation:
     runs-on: ubuntu-latest
+    environment: internal 
 
     steps:
       - name: Checkout repository
