parse json in response for upload-id

--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -103,7 +103,7 @@ jobs:
           fi
       
           # Extract upload ID from response (assuming JSON response)
-          upload_id=$(echo $upload_response | jq -r '.file_upload_id')
+          upload_id=$(echo $upload_response | jq -r '.[0].file_upload_id')
           
           echo "FILE_UPLOAD_ID=$upload_id" >> $GITHUB_OUTPUT
 
