--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -107,7 +107,9 @@ jobs:
 
           echo "Upload ID: $upload_id"
           echo "FILE_UPLOAD_ID=$upload_id" >> $GITHUB_OUTPUT
-          echo "Upload ID: $FILE_UPLOAD_ID"
           
+      - name: Upload package
+        run: |
+          echo "Upload ID: ${{ steps.fetch_release.outputs.FILE_UPLOAD_ID }}"
           
 
